# saop

./: .agent.env  .dockerignore  .gitignore  .pre-commit-config.yaml  Grafana_Prom_Dashboard.json  README.md  docker-compose.yml  dockerfile  dockerfile.mcp  prometheus.yml  pyproject.toml  requirements.txt  test.txt  tmpaczuczur
.github/workflows/: place-holder-actions.yml
agents/foo/: .env  agent.yaml  langgraph_tool_wrapper.py  main.py  mcp_client.py  mcp_tools_registry.py
agents/foo/.well-known/: agent-card.json
saop/: cli.py
saop/saop_core/: agent_config.py  otel-collector-config.yaml  telemetry.py
saop/saop_core/llm/: client.py
saop/saop_core/mcp/: client.py  legal_tool_defs.py  mcp_tools_registry.py
saop/saop_mcp/: mcp_server.py  mcp_tool_defs.py  mcp_tools_registry.py
saop/templates/base_agent/: .env  agent_config.py  graph.py  langgraph_tool_wrapper.py  main.py  mcp_server.py  telemetry.py
saop/templates/legal_agent/: .env  agent.yaml  langgraph_tool_wrapper.py  main.py
