[tool.poetry]
package-mode = false

[project]
name = "saop"
version = "0.1.0"
description = "Monorepo managed by Poetry. Tooling: pre-commit, Black, Ruff, mypy."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pre-commit (>=4.3.0,<5.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "ruff (>=0.12.8,<0.13.0)",
    "mypy (>=1.17.1,<2.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "prometheus-client (>=0.22.1,<0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
